--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3 class="h3 text-center paddin-top-bottom-20">Productos destacados</h3>
 
         <section class="grid-section grid-area">
-            <!-- <div class="img-containter">
+            <!--<div class="img-containter">
                 <div class="img-containter__img">
                     <img src="img/ropa/buzos/buzo001/22d0a714-9859-4140-a0fd-c5d17cb6a1e31-bb6268496dbb4b8d1b16216170415630-640-0.jpg" alt="Buzo ajustado gris">
                 </div>
@@ -98,6 +98,10 @@
                 <div class="img-containter__info">
                     <h4>Camisa 01</h4>
                     <p>$2.500</p>
+                </div>
+                <div class="img-container__option">
+                    <button class="button">Comprar</button>
+                    <button class="button">Comprar</button>
                 </div>
             </div>
             <div class="img-containter">
