--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
            <p>2021 E-Commerce. Todos los derechos reservados</p> 
         </div>
     </footer>
-    <script src="./node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/app.js"></script>
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
